# dbt-databricks-demo

./: README.md  pyproject.toml
.databricks/: project.json
demo/macros/: debug_env_var.sql
demo/profiles/demo/: profiles.yml
demo/profiles/pat/: profiles.yml
notebooks/: check_env_vars.py  check_profiles.py
workflows/: demo.json  demo_custom.json  demo_custom_pat.json  demo_default.json
