[tool.poetry]
name = "dbt-databricks-demo"
version = "0.1.0"
description = "Demo dbt-databricks project"
authors = ["Agnieszka Augustyniak <agnieszka.augustyniak@databricks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
dbt-databricks = "^1.4.2"
dbt-core = "^1.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
